Builder: Resolve layout issues
* Fix constant scroll bar issue
* Increase sidebar width

--- a/builder/resources/base.styl
+++ b/builder/resources/base.styl
@@ -21,11 +21,12 @@ fieldset {
 .builder {
 	font-size: 0;
 	height: 100%;
+	padding-top: $headerHeight;
 }
 
 .control {
 	width: $sidebarWidth;
-	height: calc(100% - 70px);
+	height: 100%;
 	display: inline-block;
 	vertical-align: top;
 	font-size: 16px;
@@ -41,8 +42,8 @@ fieldset {
 	position: relative;
 	z-index: 2;
 	background: #F8F8F8;
-	width: calc(100% - $sidebarWidth);
-	height: calc(100% - 70px);
+	width: "calc(100% - %s)" % $sidebarWidth;
+	height: 100%;
 	display: inline-block;
 	vertical-align: top;
 	font-size: 16px;
@@ -62,12 +63,15 @@ fieldset {
  */
 
 .header {
-	position: relative;
+	position: absolute;
+	top:0;
+	left:0;
 	width: 100%;
 	background: white;
 	overflow: hidden;
 	font-size: 24px;
 	font-weight: 100;
+	height: $headerHeight;
 	color: white;
 	vertical-align: middle;
 	box-shadow: 0px 4px 10px -2px #0B1E2A;
@@ -75,7 +79,7 @@ fieldset {
 
 	.controlHeader {
 		background: #1284CC;
-		width: 300px;
+		width: $sidebarWidth;
 		display: inline-block;
 	}
 
