--- a/builder/resources/columnsPane.styl
+++ b/builder/resources/columnsPane.styl
@@ -232,7 +232,6 @@
  */
 
 .columnEditor {
-	height: 100%;
 	width: 200%;
 	transition: transform .2s ease-in-out;
 }
