--- a/builder/resources/overrides.styl
+++ b/builder/resources/overrides.styl
@@ -54,7 +54,7 @@
 	}
 
 	table {
-		width:300px;
+		width:$sidebarWidth;
 		line-height:26px;
 		border:0;
 	}
